# libmimiio

./: LICENSE  Makefile.am  README.md  configure-tumbler  configure.ac  customdoxygen.css  doxygen.conf  mimiio.pc.in
doc/: Makefile.am
doc/src/: license.dox  srcguide.dox
doc/src/tutorial/: errorcodes.md  how_to_build.md  open_and_close_connection.md  start_communication.md  utilities.md  writing_callback.md
examples/: Makefile.am  README.md  audio.raw  pretty_print.py
examples/cmdline/: README.md
examples/include/: BlockingDeque.h  BlockingQueue.h
examples/include/cmdline/: LICENSE
examples/mimiio_file/: Makefile.am  mimiio_file.cpp
examples/mimiio_pa/: Makefile.am  mimiio_pa.cpp
examples/mimiio_tumbler/: Makefile.am
examples/mimiio_tumbler/mimiio_tumbler_ex1/: Makefile.am  README.md  mimiio_tumbler_ex1.cpp
examples/mimiio_tumbler/mimiio_tumbler_ex2/: Makefile.am  README.md  mimiio_tumbler_ex2.cpp
examples/mimiio_tumbler/mimiio_tumbler_ex3/: Makefile.am  README.md  mimiio_tumbler_ex3.cpp  user_program.cpp  user_program.h
examples/mimiio_tumbler/mimiio_tumbler_ex3/class/: SpeechEvent.cpp  SpeechEvent.h  SpeechEventStack.h  Stream.cpp  Stream.h
examples/mimiio_tumbler/mimiio_tumbler_ex3/data/: se1.raw
m4/: ax_mimixfe_base.m4  ax_poco_base.m4
src/: Makefile.am  mimiio.cpp  mimiio.h  mimiioAsynchronousCallbackAPIController.cpp  mimiioAsynchronousCallbackAPIController.hpp  mimiioController.cpp  mimiioController.hpp  mimiioEncoderFactory.cpp  mimiioEncoderFactory.hpp  mimiioImpl.cpp  mimiioImpl.hpp  mimiioSynchronousAPIController.cpp  mimiioSynchronousAPIController.hpp  strerror.hpp  typedef.hpp
src/encoder/: encoder.hpp  flac.cpp  flac.hpp  flacPT.hpp  pcm.hpp
src/worker/: mimiioRxWorker.cpp  mimiioRxWorker.hpp  mimiioTxWorker.cpp  mimiioTxWorker.hpp
